Add drawdown recovery analysis and risk interpretation

--- a/notebooks/step5_multi_asset.ipynb
+++ b/notebooks/step5_multi_asset.ipynb
@@ -737,8 +737,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e8135865",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ticker\n",
+       "GLD    5.0\n",
+       "QQQ    6.0\n",
+       "SPY    6.0\n",
+       "IWM    7.0\n",
+       "TLT    8.0\n",
+       "Name: total_days, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_all.groupby(\"ticker\")[\"total_days\"].median().sort_values()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d1cbb8",
    "metadata": {},
    "outputs": [],
    "source": []
